2014-01-14  Eric Wolf  <wolf@Talisman>

	* Version 0.1020
	* reset password link activation also validates email
	* fixed bug in client side pagination
	* after_new_fun javascript function also takes data hash as an argument.
	* new element designation in columns : ~ indicates just html to follow
	* $$ item..the item in question

2014-01-06  Eric Wolf  <wolf@Talisman>

	* Version 0.1019
	* Mongo db tries 3 reconnects if it errors out connecting to mongo
	* wrap cron actions in eval so it doesn't crash the server.
	* added $.yote.util.refresh_ui function
	* added _account_handles in Yote::AppRoot
	* fixed bug in Yote::UserObj permissions.

2014-01-02  Eric Wolf  <wolf@Talisman>

	* Version 0.1018
	* fixed bug in yote_panel refresh

	* Version 0.1017
	* added Yote::Account::new_user_obj
	* added new_object_type and new_requires to yote.util.js control_table method for controlling access to creating new objecs and specifying which object types those are.

2013-12-27  Eric Wolf  <wolf@Talisman>
	* Version 0.1016
	* count and paginate will return appropriate things by ObjProvider if they are operating on an empty field
	* fixed a bug in mongo where the paginate was incorrect for hashed things

2013-12-26  Eric Wolf  <wolf@Talisman>

	* Version 0.1015
	* updated tests

2013-12-13  Eric Wolf  <wolf@Talisman>

	* updated _check_root to just change the handle and password of the existing master account rather than created a new one
	* javascript create_login changed to be called on the app, and also removed defunct register_login method (called from javascript).
	* removed EMAIL and HANDLE cache vars from Yote::YoteRoot. These were buggy, given the threaded nature of Yote. This also revealed a bug in the hash function of mongo db. It was not escaping the periods in the keys properly.
	* added a Yote::SimpleTemplate class with a _fill method
	* $.yote.util.template_edit to edit templates
	* added mail configuration options
	* account can be created on mail now