@@ -6,6 +6,7 @@
 	* after_new_fun javascript function also takes data hash as an argument.
 	* new element designation in columns : ~ indicates just html to follow
 	* $$ item..the item in question
+	* new client server side templating
 
 2014-01-06  Eric Wolf  <wolf@Talisman>
 
